src/test/ui/reachable/expr_cast.stderr
error: unreachable expression
  --> $DIR/expr_cast.rs:9:13
   |
LL |     let x = {return} as !;
   |             ^------^^^^^^
   |             ||
   |             |diverging due to this
   |             unreachable expression
   |
note: lint level defined here
  --> $DIR/expr_cast.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

